part2/2.08/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo-app
  name: todo-app
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: todo-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: a-pv
          persistentVolumeClaim:
            claimName: pv-claim
      containers:
        - name: be-todos
          image: lnsth/todo-app-be:exercise_2.08
          imagePullPolicy: Always
          volumeMounts:
          - name: a-pv
            mountPath: /files
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - name: fe-todos
          image: lnsth/todo-app-fe:exercise_2.08
          imagePullPolicy: Always
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
