part2/2.08/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app
spec:
  rules:
    - http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-svc
                port:
                  number: 2222
          - path: /todo
            pathType: Prefix
            backend:
              service:
                name: todo-app-svc
                port:
                  number: 3333
